--- a/css/join.css
+++ b/css/join.css
@@ -15,6 +15,7 @@ body {
   position: fixed;
   /* Set the navbar to fixed position */
   top: 0;
+  z-index: 9999;
   /* Position the navbar at the top of the page */
   width: 100%;
   box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.513); }
@@ -110,7 +111,8 @@ body {
   .topnav.responsive .dropdown .dropbtn {
     display: block;
     width: 100%;
-    text-align: left; } }
+    text-align: left; } 
+  }
 
 /* Footer */
 .footer {
@@ -127,14 +129,15 @@ body {
   margin: 0;
   padding: 0;
   background: url("join.jpg");
-  background-size: cover; }
-
+  background-size: cover;}
+  
 .contact-form {
   width: 85%;
   max-width: 600px;
   background: #ececec;
   position: fixed;
-  z-index: 1;
+  text-align: center;
+  justify-content: center;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
