--- a/css/service.css
+++ b/css/service.css
@@ -154,12 +154,11 @@ body {
 justify-content: center;
 }
 .services h1{
-  
   text-transform: uppercase;
   font-size: 40px;
   color: #272743;
   padding-bottom: 30px;
-  margin-top: 70px;
+  margin-top: 100px;
   font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
 }
 .cen{
