--- a/css/social.css
+++ b/css/social.css
@@ -142,7 +142,7 @@ body {
 
 .services {
   text-align: center;
-  margin-top: 3%; }
+  margin-top: 5%; }
 
 .services h1 {
   display: inline-block;
